# CovidFX

./: .gitignore  README.md
CovidFX/: CMakeLists.txt  Country.cpp  Country.h  CovidFX.pro  country.h  homescreen.cpp  homescreen.h  homescreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  colorpalette.xml
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-8f6de60d410d33ef90b6.json  codemodel-v2-7e553470586502f12d70.json  directory-.-Debug-bbd4d76cba852d4adbb3.json  index-2023-11-02T19-08-31-0951.json  target-CovidFX-Debug-89b1b0757d7da4e90e4a.json  target-CovidFX_autogen-Debug-54441dd5b4d38e5b339d.json
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-5dfb200305dcb073faf0.json  codemodel-v2-194a0e39f554792faec3.json  directory-.-Debug-bd7368250e9532af1717.json  index-2023-11-02T18-59-28-0638.json  target-CovidFX-Debug-3fe3a923663d7d2ac82e.json  target-CovidFX_autogen_timestamp_deps-Debug-d4f595eeab4fbd33d0f2.json
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QDialog.99D00332A5145474.idx  QGroupBox.29DD88844DF5F949.idx  QMessageBox.C9960AAAAD468E54.idx  allocator.h.93BF9A1F82F6688C.idx  auto_ptr.h.1589B15250F603E2.idx  basic_string.h.3EA6F3E3C03CF711.idx  cpp_type_traits.h.18CE80C3AA2F2928.idx  exception.h.6347ADACB335B5B2.idx  homescreen.cpp.067D4D5BA7CEAC0E.idx  homescreen.h.4179054128259538.idx  main.cpp.206DA71570D19D53.idx  mainwindow.cpp.9B521ABE13DC49B3.idx  mainwindow.h.261BDC5D345FD413.idx  qarraydataops.h.F95099282682F50C.idx  (+15 more)
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/CovidFX_autogen/: deps  mocs_compilation.cpp
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/CovidFX_autogen/EWIEGA46WW/: moc_homescreen.cpp  moc_homescreen.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-CovidFX-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/CovidFX_autogen/include/: ui_homescreen.h  ui_mainwindow.h
